[package]
name = "telemetry_collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.3.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.1", features = ["add-extension", "trace"] }
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "collectorlib"
path = "src/lib.rs"

[[bin]]
name = "collector"
path = "src/main.rs"